Added projects page for case studies. case study link in nav links to projects.html

--- a/contact.html
+++ b/contact.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="utf-8">
   <title>Marquis Whaley | Contact</title>
-  <meta content="ingenium - Webflow HTML website template" name="description">
-  <meta content="ingenium - Webflow HTML website template" property="og:title">
-  <meta content="ingenium - Webflow HTML website template" property="og:description">
-  <meta content="ingenium - Webflow HTML website template" property="twitter:title">
-  <meta content="ingenium - Webflow HTML website template" property="twitter:description">
+  <meta content="Marquis Whaley | Contact" name="description">
+  <meta content="Marquis Whaley | Contact" property="og:title">
+  <meta content="Marquis Whaley | Contact" property="og:description">
+  <meta content="Marquis Whaley | Contact" property="twitter:title">
+  <meta content="Marquis Whaley | Contact" property="twitter:description">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -33,7 +33,7 @@
           <a href="about.html" class="nav-link w-inline-block">
             <div class="nav-link-text">About</div><img src="images/nav-arrow-black.svg" alt="" class="nav-arrow">
           </a>
-          <a href="case-studies/rarety.html" aria-current="page" class="nav-link w-inline-block w--current">
+          <a href="projects.html" aria-current="page" class="nav-link w-inline-block w--current">
             <div class="nav-link-text">Case Studies</div><img src="images/nav-arrow-black.svg" alt="" class="nav-arrow">
           </a>
           <a href="contact.html" aria-current="page" class="nav-link w-inline-block w--current">
@@ -52,7 +52,7 @@
               <div class="scroller-track hero large">
                 <div class="anim-on-load-container">
                   <div style="opacity:1;display:block" class="animonload-right"></div>
-                  <h1>Say hello, i’d love to say hi back</h1>
+                  <h1>Say hello, I’d love to say hi back</h1>
                 </div>
               </div>
             </div>
