--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <a href="about.html" class="nav-link w-inline-block">
           <div class="nav-link-text">About</div><img src="images/nav-arrow-black.svg" alt="" class="nav-arrow">
         </a>
-        <a href="case-studies/rarety.html" aria-current="page" class="nav-link w-inline-block w--current">
+        <a href="projects.html" aria-current="page" class="nav-link w-inline-block w--current">
           <div class="nav-link-text">Case Studies</div><img src="images/nav-arrow-black.svg" alt="" class="nav-arrow">
         </a>
         <a href="contact.html" aria-current="page" class="nav-link w-inline-block w--current">
