--- a/case-studies/zenith.html
+++ b/case-studies/zenith.html
@@ -49,7 +49,7 @@
                     <div class="nav-link-text">About</div><img src="../images/nav-arrow-black.svg" alt=""
                         class="nav-arrow">
                 </a>
-                <a href="../case-studies/index.html" aria-current="page" class="nav-link white w-inline-block w--current">
+                <a href="./../projects.html" aria-current="page" class="nav-link white w-inline-block w--current">
                     <div class="nav-link-text">Case Studies</div><img src="../images/nav-arrow-black.svg" alt=""
                         class="nav-arrow">
                 </a>
