changed images on index for case study links. added margin between them. removed the captions from about page instagram section

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <h2 class="project-item-title"
                   style="color: rgb(0, 0, 0); opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
                   Rarety</h2><img
-                  src="https://uploads-ssl.webflow.com/605ba11a3c65b4b56b34ab37/605ba11a3c65b4748e34ab9e_the-creative-exchange.jpg"
+                  src="./images/rarety-hero.png"
                   alt="" class="project-item-image"
                   style="will-change: transform; transform: translate3d(29.413vw, 99.99vh, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"><img
                   src="https://uploads-ssl.webflow.com/605ba1193c65b44e9f34ab13/605ba11a3c65b4cf1f34ab4f_right-white-arrow.svg"
@@ -137,7 +137,7 @@
                 <h2 class="project-item-title"
                   style="color: rgb(0, 0, 0); opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
                   Zenith</h2><img
-                  src="https://uploads-ssl.webflow.com/605ba11a3c65b4b56b34ab37/605ba11a3c65b4748e34ab9e_the-creative-exchange.jpg"
+                  src="./images/zenith/zenith-hero.jpg"
                   alt="" class="project-item-image"
                   style="will-change: transform; transform: translate3d(29.413vw, 99.99vh, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"><img
                   src="https://uploads-ssl.webflow.com/605ba1193c65b44e9f34ab13/605ba11a3c65b4cf1f34ab4f_right-white-arrow.svg"
